<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~ *  Created Ernald Zykaj on 29/12/20 10:26 PM
  ~ *  Copyright Ⓒ 2020. All rights reserved Ⓒ 2020
  ~ *  Last modified: 28/12/20 2:58 AM
  ~ *
  ~ *  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
  ~ *  except in compliance with the License. You may obtain a copy of the License at
  ~ *  http://www.apache.org/licenses/LICENS... Unless required by applicable law or agreed to in writing, software
  ~ *   distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
  ~ *   either express or implied. See the License for the specific language governing permissions and
  ~ *   limitations under the License.
  ~ */
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/menu_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="#fff"
        android:background="@color/colorPrimary"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarThumbHorizontal="@null"
        android:scrollbarThumbVertical="@null">



        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="ski_touring_backcountry_skiing.json"
                app:lottie_loop="true"
                tools:layout_editor_absoluteX="-16dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/text_signin_message"
                android:textColor="#696969"
                android:textSize="16sp"
                android:textStyle="bold" />



            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_person"
                        android:drawableLeft="@drawable/ic_person"
                        android:drawablePadding="12dp"
                        android:hint="@string/hint_email"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="50dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="12dp"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:minWidth="320dp"
                        android:minHeight="50dp" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="40dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Remember Me" />
            <Button
                style="@style/TextyButton"
                android:id="@+id/button_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="10dp"
                android:layout_marginRight="24dp"
                android:text="@string/text_forgot_password" />



            <Button
                android:id="@+id/button_signin"
                style="@style/Button1"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/button_sign_in" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:visibility="invisible" />

            <Button
                style="@style/TextyButton"
                android:id="@+id/button_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:text="@string/text_signin_signup" />
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-5203530266762842/6623404478">
        </com.google.android.gms.ads.AdView>



    </RelativeLayout>


</LinearLayout>